force-app/main/default/objects/Property__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>State__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nashik</fullName>
            </value>
            <value>
                <fullName>Surat</fullName>
            </value>
            <value>
                <fullName>Jaipur</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>