force-app/main/default/objects/Property__c/fields/Commercial__c.field-meta.xml
<CustomField>
    <fullName>Commercial__c</fullName>
    <label>Commercial:</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Property_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Shop</fullName>
            </value>
            <value>
                <fullName>Office</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>