force-app/main/default/objects/Property__c/fields/Industrial__c.field-meta.xml
<CustomField>
    <fullName>Industrial__c</fullName>
    <label>Industrial:</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Property_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Factory</fullName>
            </value>
            <value>
                <fullName>Mall</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>