force-app/main/default/objects/Property__c/fields/Residential__c.field-meta.xml
<CustomField>
    <fullName>Residential__c</fullName>
    <label>Residential:</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Property_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1BHK</fullName>
            </value>
            <value>
                <fullName>2BHK</fullName>
            </value>
            <value>
                <fullName>3BHK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>