force-app/main/default/objects/Property__c/recordTypes/Buy.recordType-meta.xml
<RecordType>
    <fullName>Buy</fullName>
    <active>true</active>
    <label>Buy</label>
</RecordType>